Cải thiện cấu trúc dự án, sửa lỗi entity và thêm tham chiếu