@@ -1,20 +1,21 @@
 package com.skincare.service;
 
-import com.skincare.model.Category;
-import com.skincare.model.Service;
-import com.skincare.repository.CategoryRepository;
-import com.skincare.repository.ServiceRepository;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import com.skincare.model.Category;
+import com.skincare.repository.CategoryRepository;
+import com.skincare.repository.ServiceRepository;
 
 @Service
 public class ServiceService {
-
+    
     private final ServiceRepository serviceRepository;
     private final CategoryRepository categoryRepository;
     
@@ -24,151 +25,148 @@ public class ServiceService {
         this.categoryRepository = categoryRepository;
     }
     
-    // Tạm thời dùng dữ liệu giả cho đến khi tích hợp với CSDL
-    private List<Service> services = new ArrayList<>();
-    private List<Category> categories = new ArrayList<>();
+    private List<com.skincare.model.Service> services = new ArrayList<>();
     
-    public ServiceService() {
-        // Khởi tạo một số dữ liệu mẫu
-        initSampleData();
-    }
-    
-    private void initSampleData() {
-        // Tạo danh mục
+    // Phương thức tạo dữ liệu mẫu khi khởi động ứng dụng
+    public void initSampleData() {
+        if (!services.isEmpty()) {
+            return;
+        }
+        
+        // Tạo các danh mục
         Category facialCategory = new Category();
         facialCategory.setId(1L);
-        facialCategory.setName("Chăm sóc da mặt");
-        facialCategory.setDescription("Các dịch vụ chăm sóc da mặt chuyên sâu");
+        facialCategory.setName("Facial Treatments");
+        facialCategory.setDescription("Various facial treatments for different skin types");
         
         Category bodyCategory = new Category();
         bodyCategory.setId(2L);
-        bodyCategory.setName("Chăm sóc cơ thể");
-        bodyCategory.setDescription("Các dịch vụ chăm sóc da toàn thân");
+        bodyCategory.setName("Body Treatments");
+        bodyCategory.setDescription("Body care and massage treatments");
         
         Category acneCategory = new Category();
         acneCategory.setId(3L);
-        acneCategory.setName("Điều trị mụn");
-        acneCategory.setDescription("Các dịch vụ điều trị mụn chuyên sâu");
+        acneCategory.setName("Acne & Scar Treatments");
+        acneCategory.setDescription("Specialized treatments for acne and scars");
         
-        categories.add(facialCategory);
-        categories.add(bodyCategory);
-        categories.add(acneCategory);
+        // Tạo dịch vụ mẫu
+        com.skincare.model.Service basicFacial = new com.skincare.model.Service();
+        basicFacial.setId(1L);
+        basicFacial.setName("Basic Facial");
+        basicFacial.setDescription("A deep cleansing facial that includes exfoliation, extraction, and hydration");
+        basicFacial.setPrice(new BigDecimal("500000"));
+        basicFacial.setDuration(60);
+        basicFacial.setCategory(facialCategory);
+        basicFacial.setStatus("ACTIVE");
+        basicFacial.setFeatured(true);
         
-        // Tạo dịch vụ
-        Service service1 = new Service();
-        service1.setId(1L);
-        service1.setName("Trị liệu da mặt cao cấp");
-        service1.setDescription("Phương pháp trị liệu chuyên sâu giúp làm sạch, dưỡng ẩm và cải thiện tình trạng da mặt.");
-        service1.setPrice(800000.0);
-        service1.setDuration(60);
-        service1.setCategory(facialCategory);
-        service1.setActive(true);
+        com.skincare.model.Service advancedFacial = new com.skincare.model.Service();
+        advancedFacial.setId(2L);
+        advancedFacial.setName("Advanced Facial");
+        advancedFacial.setDescription("Premium facial with anti-aging serums and specialized massage techniques");
+        advancedFacial.setPrice(new BigDecimal("800000"));
+        advancedFacial.setDuration(90);
+        advancedFacial.setCategory(facialCategory);
+        advancedFacial.setStatus("ACTIVE");
+        advancedFacial.setFeatured(true);
         
-        Service service2 = new Service();
-        service2.setId(2L);
-        service2.setName("Điều trị mụn chuyên sâu");
-        service2.setDescription("Phương pháp điều trị mụn hiệu quả, giúp loại bỏ mụn và ngăn ngừa sẹo thâm.");
-        service2.setPrice(650000.0);
-        service2.setDuration(90);
-        service2.setCategory(acneCategory);
-        service2.setActive(true);
+        com.skincare.model.Service bodyScrub = new com.skincare.model.Service();
+        bodyScrub.setId(3L);
+        bodyScrub.setName("Body Scrub & Massage");
+        bodyScrub.setDescription("Full body exfoliation followed by a relaxing massage");
+        bodyScrub.setPrice(new BigDecimal("1200000"));
+        bodyScrub.setDuration(120);
+        bodyScrub.setCategory(bodyCategory);
+        bodyScrub.setStatus("ACTIVE");
+        bodyScrub.setFeatured(false);
         
-        Service service3 = new Service();
-        service3.setId(3L);
-        service3.setName("Trẻ hóa da không phẫu thuật");
-        service3.setDescription("Liệu pháp trẻ hóa da tiên tiến không xâm lấn, giúp làm săn chắc và trẻ hóa làn da.");
-        service3.setPrice(1200000.0);
-        service3.setDuration(120);
-        service3.setCategory(facialCategory);
-        service3.setActive(true);
+        com.skincare.model.Service acneTreatment = new com.skincare.model.Service();
+        acneTreatment.setId(4L);
+        acneTreatment.setName("Acne Treatment");
+        acneTreatment.setDescription("Specialized treatment to reduce acne and prevent breakouts");
+        acneTreatment.setPrice(new BigDecimal("650000"));
+        acneTreatment.setDuration(75);
+        acneTreatment.setCategory(acneCategory);
+        acneTreatment.setStatus("ACTIVE");
+        acneTreatment.setFeatured(false);
         
-        Service service4 = new Service();
-        service4.setId(4L);
-        service4.setName("Massage toàn thân thư giãn");
-        service4.setDescription("Phương pháp massage kết hợp giữa các kỹ thuật phương Đông và phương Tây giúp thư giãn cơ thể.");
-        service4.setPrice(550000.0);
-        service4.setDuration(60);
-        service4.setCategory(bodyCategory);
-        service4.setActive(true);
-        
-        services.add(service1);
-        services.add(service2);
-        services.add(service3);
-        services.add(service4);
+        // Thêm vào danh sách
+        services.add(basicFacial);
+        services.add(advancedFacial);
+        services.add(bodyScrub);
+        services.add(acneTreatment);
     }
     
-    public List<Service> getAllServices() {
-        return services;
-    }
-    
-    public List<Service> getAllActiveServices() {
+    // Phương thức lấy tất cả dịch vụ đang hoạt động
+    public List<com.skincare.model.Service> getAllActiveServices() {
         return services.stream()
-                .filter(Service::isActive)
-                .toList();
+                .filter(service -> "ACTIVE".equals(service.getStatus()))
+                .collect(Collectors.toList());
     }
     
-    public List<Service> getFeaturedServices() {
-        // Giả sử 3 dịch vụ đầu tiên là nổi bật
-        return services.stream()
-                .filter(Service::isActive)
-                .limit(3)
-                .toList();
-    }
-    
-    public Optional<Service> getServiceById(Long id) {
+    // Phương thức lấy dịch vụ theo ID
+    public Optional<com.skincare.model.Service> getServiceById(Long id) {
         return services.stream()
                 .filter(service -> service.getId().equals(id))
                 .findFirst();
     }
     
-    public List<Service> getServicesByCategory(Long categoryId) {
+    // Phương thức lấy danh sách dịch vụ nổi bật
+    public List<com.skincare.model.Service> getFeaturedServices() {
         return services.stream()
-                .filter(service -> service.getCategory().getId().equals(categoryId))
-                .filter(Service::isActive)
-                .toList();
+                .filter(service -> "ACTIVE".equals(service.getStatus()) && service.isFeatured())
+                .collect(Collectors.toList());
     }
     
-    public List<Service> getRelatedServices(Long serviceId) {
-        // Lấy dịch vụ hiện tại
-        Service currentService = getServiceById(serviceId).orElse(null);
-        if (currentService == null) {
-            return List.of();
+    // Phương thức lấy danh sách dịch vụ theo danh mục
+    public List<com.skincare.model.Service> getServicesByCategory(Long categoryId) {
+        return services.stream()
+                .filter(service -> service.getCategory().getId().equals(categoryId) && "ACTIVE".equals(service.getStatus()))
+                .collect(Collectors.toList());
+    }
+    
+    // Phương thức lưu hoặc cập nhật dịch vụ
+    public com.skincare.model.Service saveService(com.skincare.model.Service service) {
+        if (service.getId() == null) {
+            Long newId = services.stream()
+                    .mapToLong(com.skincare.model.Service::getId)
+                    .max()
+                    .orElse(0L) + 1;
+            service.setId(newId);
+            services.add(service);
+        } else {
+            for (int i = 0; i < services.size(); i++) {
+                if (services.get(i).getId().equals(service.getId())) {
+                    services.set(i, service);
+                    break;
+                }
+            }
         }
-        
-        // Lấy các dịch vụ khác trong cùng danh mục
-        return services.stream()
-                .filter(service -> service.getCategory().getId().equals(currentService.getCategory().getId()))
-                .filter(service -> !service.getId().equals(serviceId))
-                .filter(Service::isActive)
-                .limit(3)
-                .toList();
+        return service;
     }
     
-    public List<Category> getAllCategories() {
-        return categories;
-    }
-    
-    public Optional<Category> getCategoryById(Long id) {
-        return categories.stream()
-                .filter(category -> category.getId().equals(id))
-                .findFirst();
-    }
-    
-    public List<Service> searchServices(String keyword) {
-        return serviceRepository.findByNameContainingIgnoreCaseAndActiveTrue(keyword);
-    }
-    
-    @Transactional
-    public Service saveService(Service service) {
-        return serviceRepository.save(service);
-    }
-    
-    @Transactional
+    // Phương thức xóa dịch vụ
     public void deleteService(Long id) {
-        serviceRepository.deleteById(id);
+        services.removeIf(service -> service.getId().equals(id));
     }
     
-    public List<Category> getActiveCategories() {
-        return categoryRepository.findByActiveTrue();
+    // Phương thức tìm kiếm dịch vụ theo tên
+    public List<com.skincare.model.Service> searchServices(String keyword) {
+        return services.stream()
+                .filter(service -> 
+                    service.getName().toLowerCase().contains(keyword.toLowerCase()) &&
+                    "ACTIVE".equals(service.getStatus())
+                )
+                .collect(Collectors.toList());
+    }
+    
+    // Phương thức lấy danh sách tất cả danh mục
+    public List<Category> getAllCategories() {
+        List<Category> categories = new ArrayList<>();
+        services.stream()
+                .map(com.skincare.model.Service::getCategory)
+                .distinct()
+                .forEach(categories::add);
+        return categories;
     }
 } 
